# kdtree

./: README.txt  test_script.sh
source/: CMakeLists.txt  brute_force_search.cpp  build_kdtree.cpp  csv_io.cpp  csv_io.h  generate_nd_dataset.cpp  kdtree.cpp  kdtree.h  kdtreeio.cpp  kdtreeio.h  pointset.h  query_kdtree.cpp  split_criteria.cpp  split_criteria.h  test_csv_io.cpp
